--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Site for restaurant",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint 'sass/**/*.scss' --syntax scss",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp style",
+    "start": "gulp serve"
   },
   "repository": {
     "type": "git",
@@ -29,13 +33,6 @@
     "gulp-sass": "^4.0.1",
     "stylelint-config-htmlacademy": "^0.1.1"
   },
-  "scripts": {
-    "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint 'sass/**/*.scss' --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp style",
-    "start": "gulp serve"
-  },
   "browserslist": [
     "last 2 versions",
     "IE 11",
@@ -51,5 +48,8 @@
   ],
   "engines": {
     "node": "9.4"
+  },
+  "dependencies": {
+    "hoek": "^5.0.3"
   }
 }
